adding support Tandan KTXH formular

--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "webpack": "^3.2.0"
   },
   "dependencies": {
-    "@handsontable/formulajs": "^1.2.3",
+    "@handsontable/formulajs": "git+https://github.com/nkchinh/formula.js.git",
     "tiny-emitter": "^2.0.1"
   },
   "jest": {
