--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
   },
   "globals": {},
   "rules": {
+    "comma-dangle": 0,
+    "linebreak-style": 0,
     "class-methods-use-this": 0,
     "no-undef": 0,
     "new-cap": 2,
